--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-xgallerify",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "angular wrapper for query.xgallerify by xremix",
   "main": "Gruntfile.js",
   "scripts": {
@@ -21,9 +21,12 @@
     "url": "https://github.com/JohnnyTheTank/angular-xGallerify/issues"
   },
   "homepage": "https://github.com/JohnnyTheTank/angular-xGallerify#readme",
+  "dependencies": {
+    "xgallerify": "*"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-uglify": "^0.10.1",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1"
   }
 }
