--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-xgallerify",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "angular wrapper for query.xgallerify by xremix",
   "main": "Gruntfile.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "angular"
   ],
   "author": "Jonathan Hornung <jonathan.hornung@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/JohnnyTheTank/angular-xGallerify/issues"
   },
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1"
   }
