--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-xgallerify",
   "version": "1.0.2",
   "description": "angular wrapper for query.xgallerify by xremix",
-  "main": "Gruntfile.js",
+  "main": "dist/angular-xgallerify.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
